--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Hello World!</title>
 <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
 
-<h1>Hello world! Size of image reduced from 960 to 640</h1>
+<h1>Hello world! Size of image reduced from 960 to 640. added lang</h1>
 <div><img src="img_hello_world.png" alt="Hello World from Space"
 style="width:100%;max-width:640px"></div>
 <p>This is the first file in my new Git Repo.</p>
